# project-zohar

./: .gitignore  CHAT_HISTORY_SUMMARY.md  LICENSE  Makefile  README.md  README_ZH.md  config.env  config.env.example  db_inspector.py  inspect_vectordb.py  main.py  pyproject.toml  requirements.txt  simple_db_inspector.py  tailwind.config.js
docs/: CAMEL_AI_TOOLS_IMPLEMENTATION.md  MULTI_AGENT_FRAMEWORK.md  TOOL_EXECUTION_PROCESS.md  camel_ai_tools_guide.md  chat_history_parser.md  mcp_email_server.md  metadata_search_guide.md  modules_overview.md  quick_setup_guide.md
examples/: camel_ai_basic_example.py  camel_ai_integration_example.py  camel_tools_demo.py  conversation_examples.md  data_digestion_demo.py  multi_agent_demo.py  simple_chat_analyzer.py  tool_execution_demo.py
scripts/: setup_mcp_email.py  setup_wizard.py
src/: __init__.py  cli.py
src/config/: settings.py
src/core/agents/: personal_agent.py  public_agent.py
src/core/memory/: conversation_memory.py
src/core/orchestration/: bot_manager.py  health_check.py
src/module/agent/: agent_types.py  base_agent.py  camel_tool_manager.py  coordinator_agent.py  logging.py  message_bus.py  message_types.py  multi_agent_manager.py  platform_manager.py  privacy_filter.py  tool_executor_agent.py  tool_manager.py
src/module/bot/: bot_manager.py  personal_agent.py  public_agent.py
src/module/chat_analyser/: conversation_memory.py
src/module/file_parser/: content_analyzer.py  digestion_manager.py  file_discoverer.py  format_detector.py  processor.py  structure_generator.py  vector_store.py
src/module/mcp/: mcp_manager.py
src/rag/: enhanced_retrieval.py  indexer.py
src/rag/retrieval/: retriever.py
src/services/: __init__.py  camel_chat_parser.py  camel_file_processor.py  chat_history_cli.py  chat_history_config.py  chat_history_manager.py  chat_history_parser.py  chat_history_scheduler.py  mcp_code_executor.py  mcp_email_server.py  ollama_service.py  standalone_cli.py  wechat_processor.py
src/tools/mcp_servers/: client.py  manager.py
src/ui/terminal/: cli.py
src/ui/web/: app.py  chat_interface.html  setup_wizard.html
src/ui/web/templates/: index.html  setup_wizard.html
tests/: test_chat_history_parser.py  test_mcp_email_server.py
zohar-setup-wizard/: README.md  package-lock.json  package.json
zohar-setup-wizard/src/: App.css  App.tsx
zohar-setup-wizard/src-tauri/: Cargo.toml  tauri.conf.json
zohar-setup-wizard/src-tauri/src/: main.rs
zohar-setup-wizard/src/components/: ProgressSidebar.tsx  WizardLayout.tsx
zohar-setup-wizard/src/components/steps/: ActionsStep.tsx  BotSettingsStep.tsx  CompleteStep.tsx  DatabasesStep.tsx  FeaturesStep.tsx  FilesStep.tsx  PlatformsStep.tsx  WelcomeStep.tsx  index.ts
zohar-setup-wizard/src/context/: WizardContext.tsx
zohar-setup-wizard/src/types/: wizard.ts
